// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Form view readonly 1`] = `
<div
  style={
    Object {
      "margin": 20,
    }
  }
>
  <div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-1 col-sm-1 col-md-1 col-lg-1"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
              }
            }
          >
            <button
              disabled={false}
              href={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onTouchStart={[Function]}
              onTouchTap={[Function]}
              style={
                Object {
                  "MozBoxSizing": "border-box",
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "background": "none",
                  "border": 10,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 0,
                  "fontWeight": "inherit",
                  "height": 48,
                  "margin": 0,
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "padding": 12,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                  "width": 48,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <svg
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "MozUserSelect": "none",
                      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "WebkitUserSelect": "none",
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 36,
                      "msUserSelect": "none",
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 36,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
      />
    </div>
    <div
      className="row"
    />
  </div>
</div>
`;

exports[`Render Form view readonly 2`] = `
<div
  style={
    Object {
      "margin": 20,
    }
  }
>
  <div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-1 col-sm-1 col-md-1 col-lg-1"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
              }
            }
          >
            <button
              disabled={false}
              href={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onTouchStart={[Function]}
              onTouchTap={[Function]}
              style={
                Object {
                  "MozBoxSizing": "border-box",
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "background": "none",
                  "border": 10,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 0,
                  "fontWeight": "inherit",
                  "height": 48,
                  "margin": 0,
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "padding": 12,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                  "width": 48,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <svg
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "MozUserSelect": "none",
                      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "WebkitUserSelect": "none",
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 36,
                      "msUserSelect": "none",
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 36,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
      />
    </div>
    <div
      className="row"
    />
  </div>
</div>
`;

exports[`Render Form view readwrite 1`] = `
<div
  style={
    Object {
      "margin": 20,
    }
  }
>
  <div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-1 col-sm-1 col-md-1 col-lg-1"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
              }
            }
          >
            <button
              disabled={false}
              href={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onTouchStart={[Function]}
              onTouchTap={[Function]}
              style={
                Object {
                  "MozBoxSizing": "border-box",
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "background": "none",
                  "border": 10,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 0,
                  "fontWeight": "inherit",
                  "height": 48,
                  "margin": 0,
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "padding": 12,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                  "width": 48,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <svg
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "MozUserSelect": "none",
                      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "WebkitUserSelect": "none",
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 36,
                      "msUserSelect": "none",
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 36,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
      />
    </div>
    <div
      className="row"
    />
  </div>
</div>
`;

exports[`Render Form view readwrite 2`] = `
<div
  style={
    Object {
      "margin": 20,
    }
  }
>
  <div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-1 col-sm-1 col-md-1 col-lg-1"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
              }
            }
          >
            <button
              disabled={false}
              href={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onTouchStart={[Function]}
              onTouchTap={[Function]}
              style={
                Object {
                  "MozBoxSizing": "border-box",
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "background": "none",
                  "border": 10,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 0,
                  "fontWeight": "inherit",
                  "height": 48,
                  "margin": 0,
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "padding": 12,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                  "width": 48,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <svg
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "MozUserSelect": "none",
                      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "WebkitUserSelect": "none",
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 36,
                      "msUserSelect": "none",
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 36,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
      />
    </div>
    <div
      className="row"
    />
  </div>
</div>
`;

exports[`Render Form view without button 1`] = `
<div
  style={
    Object {
      "margin": 20,
    }
  }
>
  <div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-1 col-sm-1 col-md-1 col-lg-1"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
              }
            }
          >
            <button
              disabled={false}
              href={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onTouchStart={[Function]}
              onTouchTap={[Function]}
              style={
                Object {
                  "MozBoxSizing": "border-box",
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "background": "none",
                  "border": 10,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 0,
                  "fontWeight": "inherit",
                  "height": 48,
                  "margin": 0,
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "padding": 12,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                  "width": 48,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <svg
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "MozUserSelect": "none",
                      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "WebkitUserSelect": "none",
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 36,
                      "msUserSelect": "none",
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 36,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
      />
    </div>
    <div
      className="row"
    />
  </div>
</div>
`;

exports[`Render Form view without button 2`] = `
<div
  style={
    Object {
      "margin": 20,
    }
  }
>
  <div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-1 col-sm-1 col-md-1 col-lg-1"
            style={
              Object {
                "paddingLeft": 0,
                "paddingRight": 0,
              }
            }
          >
            <button
              disabled={false}
              href={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onTouchStart={[Function]}
              onTouchTap={[Function]}
              style={
                Object {
                  "MozBoxSizing": "border-box",
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "background": "none",
                  "border": 10,
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 0,
                  "fontWeight": "inherit",
                  "height": 48,
                  "margin": 0,
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "padding": 12,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                  "width": 48,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
              type="button"
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <svg
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "MozUserSelect": "none",
                      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "WebkitUserSelect": "none",
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 36,
                      "msUserSelect": "none",
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 36,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
      />
    </div>
    <div
      className="row"
    />
  </div>
</div>
`;

exports[`getViewIcon with Form view 1`] = `
<button
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onTouchStart={[Function]}
  onTouchTap={[Function]}
  style={
    Object {
      "MozBoxSizing": "border-box",
      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "background": "none",
      "border": 10,
      "boxSizing": "border-box",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 0,
      "fontWeight": "inherit",
      "height": 36,
      "margin": 0,
      "muiPrepared": true,
      "outline": "none",
      "overflow": "visible",
      "padding": 2,
      "position": "relative",
      "textDecoration": "none",
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "verticalAlign": null,
      "width": 36,
      "zIndex": 1,
    }
  }
  tabIndex={0}
  type="button"
>
  <div
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <svg
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "MozUserSelect": "none",
          "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "WebkitUserSelect": "none",
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": 24,
          "msUserSelect": "none",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z"
      />
    </svg>
    ;
  </div>
</button>
`;
